:bug: Fix Target Overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     height: 100vh;
     background: radial-gradient(circle at center, #00c1fc, #1d00c2);
     font-family: Helvetica, Arial;
+    overflow: hidden;
 }
 
 .shooter .start
